# capns-py

./: .gitignore  README.md  TEST_CATALOG.md  catalog_tests.py  move-py.sh  pyproject.toml  pyproject.toml.wstemplate  requirements-dev.txt  requirements.txt  version.txt
diffs/: .gitignore.diff  move-py.sh.diff  pyproject.toml.diff  requirements-dev.txt.diff  requirements.txt.diff
diffs/tests/: test_caller.py.diff  test_cap.py.diff  test_cap_matrix.py.diff  test_cap_urn.py.diff  test_cbor_frame.py.diff  test_cbor_integration.py.diff  test_cbor_io.py.diff  test_manifest.py.diff  test_media_spec.py.diff  test_plugin_host.py.diff  test_plugin_host_runtime.py.diff  test_plugin_relay.py.diff  test_plugin_runtime.py.diff  test_registry.py.diff  test_relay_switch.py.diff  test_response.py.diff  test_schema_validation.py.diff  test_standard_caps.py.diff  test_validation.py.diff
src/capns/: __init__.py  async_plugin_host.py  caller.py  cap.py  cap_matrix.py  cap_urn.py  cbor_frame.py  cbor_io.py  manifest.py  media_registry.py  media_spec.py  media_urn.py  plugin_host_runtime.py  plugin_relay.py  plugin_runtime.py  (+4 more)
standard/: media
tests/: test_async_plugin_host.py  test_caller.py  test_cap.py  test_cap_matrix.py  test_cap_urn.py  test_cbor_frame.py  test_cbor_integration.py  test_cbor_io.py  test_manifest.py  test_media_spec.py  test_media_urn.py  test_plugin_host.py  test_plugin_host_runtime.py  test_plugin_relay.py  test_plugin_runtime.py  test_registry.py  test_relay_switch.py  test_response.py  test_schema_validation.py  test_standard_caps.py  test_validation.py
(+44 files in other folders)
